# HoopJudge

./: .gitignore  README.md  pyproject.toml  run_ball_compare.py  run_possession_pipeline.py
app/: __init__.py  config.py  main.py
app/api/: ball.py
app/models/: ball.py
app/services/: ball_service.py
app/utils/: ball_detection.py  ball_hand_logic.py
myogait/: __init__.py  ambiguity.py  analysis.py  angles.py  ball.py  config.py  events.py  export.py  extract.py  handler_identity.py  normalize.py  player_selection.py  plotting.py  possession.py  report.py  track_pose.py  video.py
myogait/detectors/: __init__.py  ball_detector.py  contact_tcn.py  learned_contact_detector.py  person_detector.py
myogait/models/: hrnet.py  mediapipe.py  mmpose.py
myogait/trackers/: __init__.py  bytetrack_wrapper.py
myogait/training/: __init__.py  evaluate_contact_detector.py  generate_dummy_dataset.py  train_contact_tcn.py
tests/: test_angles_extended.py  test_ball.py  test_ball_detector_improved.py  test_lateral_correction.py  test_learned_contact_detector.py  test_player_selection.py  test_video.py
