[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myogait"
version = "0.5.14"
description = "Markerless video-based gait analysis toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Frederic Fer", email = "f.fer@institut-myologie.org"},
]
keywords = ["gait", "pose-estimation", "biomechanics", "opensim", "markerless"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "opencv-python-headless>=4.8",
    "matplotlib>=3.7",
    "gaitkit==1.3.1",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
mediapipe = ["mediapipe>=0.10"]
yolo = ["ultralytics>=8.0"]
sapiens = ["torch", "huggingface-hub"]
vitpose = ["transformers>=4.45", "torch", "accelerate"]
intel = ["intel-extension-for-pytorch"]
rtmw = ["rtmlib", "onnxruntime"]
mmpose = ["mmpose", "mmdet", "openmim"]
openpose = []
detectron2 = ["torch"]
alphapose = ["torch", "torchvision", "ultralytics>=8.0"]
c3d = ["c3d>=0.5"]
excel = ["openpyxl>=3.1"]
yaml = ["pyyaml>=6.0"]
loess = ["statsmodels>=0.14"]
wavelet = ["PyWavelets>=1.5"]
all = ["myogait[mediapipe,yolo,sapiens,vitpose,rtmw,openpose,alphapose,detectron2,excel,yaml,c3d,loess,wavelet]"]
full = ["myogait[all,intel]"]
dev = ["pytest>=7.0", "pytest-cov>=5.0", "openpyxl>=3.1", "pyyaml>=6.0", "build>=1.0", "twine>=5.0", "ruff>=0.4", "statsmodels>=0.14", "PyWavelets>=1.5"]

[project.scripts]
myogait = "myogait.cli:main"

[project.urls]
Homepage = "https://github.com/IDMDataHub/myogait"
Repository = "https://github.com/IDMDataHub/myogait"
"Bug Tracker" = "https://github.com/IDMDataHub/myogait/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["myogait*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
